<resources xmlns:tools="http://schemas.android.com/tools">
  <string name="app_name">ViVidFusion</string>
  <string name="browse_featured_plugins">Browse Featured Plugins</string>
  <string name="featured_plugins">Featured Plugins</string>
  <string name="onboarding_title">Get started with VividFusion</string>
  <string name="onboarding_message">Add your first plugin to start streaming. Tap \'Browse Featured\' to explore community plugins.</string>
  <string name="home">Home</string>
  <string name="search">Search</string>
  <string name="library">Library</string>
  <string name="restart">Restart</string>
  <string name="exception">Exception</string>
  <string name="str_copy">Copy</string>
  <string name="no_internet">No Internet</string>
  <string name="incompatible_class_error">Incompatible Class Change Error</string>
  <string name="app_crashed">App Crashed</string>
  <string name="error">Error</string>
  <string name="settings">Settings</string>
  <string name="version">Version</string>
  <string name="about">About</string>
  <string name="about_summary">Learn more about ViVidFusion and its features.</string>
  <string name="add_color">Add Color</string>
  <string name="custom_colors">Custom Colors</string>
  <string name="view">View</string>
  <string name="item_video">Video Item</string>
  <string name="search_hint">Search…</string>
  <string name="search_subtitle_hint">Search title + year or IMDB id</string>
  <string name="search_lyric_hint">Search title</string>
  <string name="back">Back</string>
  <string name="search_filter">Search Filter</string>
  <string name="tv_no_focus_tag">tv_no_focus_tag</string>
  <string name="tv_shows">TV Shows</string>
  <string name="movies">Movies</string>
  <string name="unknown">Unknown</string>
  <string name="daily">Daily</string>
  <string name="app_not_available">No App Available to Handle This</string>
  <string name="today">Today</string>
  <string name="now">Now</string>
  <string name="runtime_minutes">%s min</string>
  <string name="format_date_and_day">%1$s (%2$s)</string>
  <string name="released_today">Released Today</string>
  <string name="episode_poster_img_des">Episode Description</string>
  <string name="more">More</string>
  <string name="currently_playing">Playing</string>
  <string name="crying_af">(TT)</string>
  <string name="nothing_to_show">Nothing to Show</string>
  <string name="login_required">%1$s Login Required</string>
  <string name="login">Login</string>
  <string name="failed_loading">Failed Loading</string>
  <string name="retry">Retry</string>
  <string name="not_loading">Failed to Load</string>
  <string name="loading">Loading…</string>
  <string name="not_supported">%1$s is not supported in the %2$s Extension</string>
  <string name="media_type">Media Type</string>
  <string name="extension_unselected">No Extension Selected</string>
  <string name="extension_empty">No Extensions Available</string>
  <string name="trailer">Trailer</string>
  <string name="filter">Filter</string>
  <string name="backdropDescription">Backdrop</string>
  <string name="clear_history">Clear History</string>
  <string name="subtitle">Subtitles</string>
  <string name="streams">Streams</string>
  <string name="mv_source">MV Database</string>
  <string name="extensions">Extensions</string>
  <string name="refresh">Refresh</string>
  <string name="add_extension">Add Extension</string>
  <string name="manage_extensions">Manage Extensions</string>
  <string name="name_settings">%1$s Settings</string>
  <string name="cancel">Cancel</string>
  <string name="new_folder">New Folder</string>
  <string name="logout">Log Out</string>
  <string name="switch_account">Switch Account</string>
  <string name="switch_account_to">Switch Account to %s</string>
  <string name="not_logged_in">Not Logged In</string>
  <string name="extension_settings">Extension Settings</string>
  <string name="close">Close</string>
  <string name="extension_summary">Manage your installed or downloaded extensions</string>
  <string name="all">All</string>
  <string name="by_author">By %1$s</string>
  <string name="name_extension">%1$s Extension by %2$s</string>
  <string name="extension_title">v%1$s • by %2$s \nID: %3$s</string>
  <string name="input_api_key">Enter your API key</string>
  <string name="submit">Submit</string>
  <string name="open_browser">Open Browser</string>
  <string name="ui_summary">Customize the appearance and behavior of the user interface</string>
  <string name="ui">UI</string>
  <string name="play_now">Play Now</string>
  <string name="players_cannot_play">This stream is not compatible with any installed player. Go to Settings and install a supported player like MX Player or VLC.</string>
  <string name="exo_description">ExoPlayer is a media player library developed by Google for Android apps. It\'s customizable, supports a wide range of media formats, and includes advanced features like playback speed control.</string>
  <string name="kodi_description">Kodi Player is a free and open-source media player software application developed by the XBMC Foundation. It allows users to play and view most videos, music, podcasts, and other digital media files from local and network storage media and the internet. It also supports add-ons and plugins, making it highly customizable and versatile. Kodi Player has a user-friendly interface and can run on various operating systems, including Windows, macOS, Linux, Android, and iOS.</string>
  <string name="mx_description">MX Player is a popular media player for Android devices that supports a wide range of video and audio formats, including MP4, AVI, MKV, and MP3. It offers advanced features such as hardware acceleration, subtitle support, gesture controls, and playback speed control, making it a powerful and user-friendly media player. MX Player also has free and paid versions, with the paid version providing additional features like ad-free viewing and online streaming.</string>
  <string name="vlc_description">VLC Player is a free and open-source cross-platform media player software application developed by VideoLAN. It supports a wide range of media formats, including DVDs, VCDs, and various streaming protocols. VLC Player has a simple and user-friendly interface, with advanced features like customizable skins, subtitle support, playback speed control, and audio and video effects. It also supports plugins and extensions, making it highly customizable and versatile for various media playback needs.</string>
  <string name="dns_pref">DNS over HTTPS</string>
  <string name="dns_pref_summary">Useful for bypassing ISP blocks</string>
  <string name="dot">•</string>
  <string name="theme">Theme</string>
  <string name="theme_summary">Dark, Light, System</string>
  <string name="animations">Animations</string>
  <string name="animations_summary">Enjoy a more visually engaging experience</string>
  <string name="shared_element_transitions_summary">This effect makes the app feel more polished and modern by providing a smooth visual flow between screens.</string>
  <string name="shared_element_transitions">Cover Art Transitions</string>
  <string name="value">Value</string>
  <string name="str_not_set" tools:ignore="PrivateResource">Not Set</string>
  <string name="ok">OK</string>
  <string name="recommended">Recommended</string>
  <string name="play_episode">Play Episode\n</string>
  <string name="menu_icon_desc">Menu Icon</string>
  <string name="open_with">Open With</string>
  <string name="subscribe">Subscribe</string>
  <string name="share">Share</string>
  <string name="open_in_browser">Open in Browser</string>
  <string name="rating_format">%.1f</string>
  <string name="full_rating">/10.0</string>
  <string name="upcoming">Upcoming</string>
  <string name="title_discover">Discover</string>
  <string name="title_watch_providers">Watch Providers</string>
  <string name="title_search">Search</string>
  <string name="title_social_media">Social Media</string>
  <string name="descending_sort">Sort Descending</string>
  <string name="ascending_sort">Sort Ascending</string>
  <string name="favorite_added">%s Added to Favorites</string>
  <string name="favorite_removed">%s Removed from Favorites</string>
  <string name="season">Season</string>
  <string name="episode">Episode</string>
  <string name="season_short">S</string>
  <string name="episode_short">E</string>
  <string name="episode_short_format">S%02dE%02d</string>
  <string name="type_watching">Watching</string>
  <string name="type_on_hold">On-Hold</string>
  <string name="type_completed">Completed</string>
  <string name="type_dropped">Dropped</string>
  <string name="type_plan_to_watch">Plan to Watch</string>
  <string name="type_none" translatable="false">None</string>
  <string name="download">Download</string>
  <string name="resume">Resume</string>
  <string name="seasons">Seasons</string>
  <string name="episodes">Episodes</string>
  <string name="sort_apply">Apply</string>
  <string name="sort_cancel">Cancel</string>
  <string name="select_episode_range">Select a range of episodes to display.</string>
  <string name="season_progress_format">%d/%d Episodes</string>
  <string name="action_show_details">More Information</string>
  <string name="action_add_to_favorites">Add to Favorites</string>
  <string name="action_remove_from_favorites">Remove from Favorites</string>
  <string name="action_load_episodes">Episodes</string>
  <string name="show_special_season">Show Special Season</string>
  <string name="content_setting_summary">Manage metadata and source options</string>
  <string name="contents">Contents</string>
  <string name="known_for">Known For</string>
  <string name="enable_dynamic_color">Use Dynamic Color</string>
  <string name="dynamic_color_summary">Creates a personalized and cohesive visual experience</string>
  <string name="choose_a_color">Choose a Color</string>
  <string name="random">Random</string>
  <string name="add">Add</string>
  <string name="dynamic_color">dynamic_color_key</string>
  <string name="not_implemented">Not Implemented Yet</string>
  <string name="extension_url_hint">Enter extension URL</string>
  <string name="permission_denied">Permission Denied</string>
  <string name="permission_required">Permission Required</string>
  <string name="music_permission_required_summary">This permission is required to access your library</string>
  <string name="add_extensions">Add Extensions</string>
  <string name="extension">Extension</string>
  <string name="link">Link</string>
  <string name="file">File</string>
  <string name="link_or_code">Link or Code</string>
  <string name="list_is_empty">List Is Empty</string>
  <string name="file_not_found">File Not Found</string>
  <string name="extension_installed_successfully">Extension Installed Successfully</string>
  <string name="extension_uninstalled_successfully">Extension Uninstalled Successfully</string>
  <string name="exit_confirm_msg">Are you sure you want to exit?</string>
  <string name="yes">Yes</string>
  <string name="no">No</string>
  <string name="dont_show_again">Don\'t Show Again</string>
  <string name="enter_pin">Enter PIN</string>
  <string name="default_account">Default</string>
  <string name="use_pin_code">Use PIN Code</string>
  <string name="create_account">Create Account</string>
  <string name="avatar">Avatar</string>
  <string name="open_local_subtitle">Open Local Subtitle</string>
  <string name="browse_online_subtitle">Find on internet</string>
  <string name="reset">Reset</string>
  <string name="subtitle_offset_title">Subtitle delay</string>
  <string name="subtitle_offset_subtract_more">Subtract more</string>
  <string name="subtitle_offset_subtract">Subtract</string>
  <string name="subtitle_offset_add">Add</string>
  <string name="subtitle_offset_add_more">Add more</string>
  <string name="no_subtitles_loaded">No subtitles loaded yet</string>
  <string name="streaming">Streaming</string>
</resources>