<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <item
    android:id="@id/homeFragment"
    android:icon="@drawable/anim_home"
    android:title="@string/home"
    />
  <item
    android:id="@id/searchFragment"
    android:icon="@drawable/anim_search"
    android:title="@string/search" />

  <item
    android:id="@id/networkStreamFragment"
    android:icon="@drawable/anim_stream"
    android:title="@string/streaming" />


  <item
    android:id="@id/libraryFragment"
    android:icon="@drawable/anim_bookmark"
    android:title="@string/library" />

  <item
    android:id="@id/settingsFragment"
    android:icon="@drawable/settings_outlined_2dp"
    android:title="@string/settings" />

</menu>
