<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="10dp"
    android:orientation="horizontal">

    <TextView
      android:id="@+id/title"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_rowWeight="1"
      android:layout_gravity="center_vertical"
      android:layout_weight="1"
      android:paddingStart="?android:attr/listPreferredItemPaddingStart"
      android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
      android:text="@string/create_account"
      android:textSize="20sp"
      android:textStyle="bold" />

  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:layout_marginBottom="60dp"
    android:orientation="vertical">

    <EditText
      android:id="@+id/accountName"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:autofillHints="username"
      android:hint="@string/default_account"
      android:inputType="text"
      android:nextFocusLeft="@id/apply_btt"
      android:nextFocusRight="@id/cancel_btt"
      android:requiresFadingEdge="vertical"
      tools:ignore="LabelFor" />

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">
      <CheckBox
        android:id="@+id/lockAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_pin_code" />

      <EditText
        android:id="@+id/pin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="username"
        android:hint="@string/enter_pin"
        android:inputType="numberPassword"
        android:nextFocusLeft="@id/apply_btt"
        android:nextFocusRight="@id/cancel_btt"
        android:requiresFadingEdge="vertical"
        android:layout_marginStart="4dp"
        tools:ignore="LabelFor"
        android:maxLength="4"
        android:visibility="gone"/>
    </LinearLayout>


    <androidx.cardview.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      app:cardCornerRadius="@dimen/rounded_image_radius">

      <ImageView
        android:id="@+id/accountImage"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:contentDescription="@string/avatar"
        android:focusable="true"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_person" />

    </androidx.cardview.widget.CardView>
  </LinearLayout>

  <LinearLayout
    android:id="@+id/apply_btt_holder"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_gravity="bottom"
    android:layout_marginTop="-60dp"
    android:gravity="bottom|end"
    android:orientation="horizontal">

    <com.google.android.material.button.MaterialButton
      android:id="@+id/apply_btt"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_vertical|end"
      android:text="@string/sort_apply" />

    <com.google.android.material.button.MaterialButton
      android:id="@+id/cancel_btt"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_vertical|end"
      android:text="@string/sort_cancel" />
  </LinearLayout>
</LinearLayout>
