<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:layout_gravity="center"
  android:background="?attr/appBackground"
  android:padding="@dimen/rounded_radius">

  <TextView
    android:id="@+id/textView4"
    style="@style/TextAppearance.Material3.TitleLarge"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/exit_confirm_msg"
    android:textStyle="bold"
    app:layout_constraintBottom_toTopOf="@+id/linearLayout"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

  <LinearLayout
    android:id="@+id/linearLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent">
    <com.google.android.material.switchmaterial.SwitchMaterial
      android:id="@+id/checkboxDontShowAgain"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/dont_show_again"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <com.google.android.material.button.MaterialButton
      android:id="@+id/yesBtn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="2dp"
      android:text="@string/yes" />

    <com.google.android.material.button.MaterialButton
      android:id="@+id/noBtn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="2dp"
      android:text="@string/no" />


  </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
